feat: add rolling blob market stats (#173)
